developers-house/ops/meta/kubernetes/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: meta-http
spec:
  selector:
    app: meta-http
  type: ClusterIP
  ports:
  - name: http
    port:  80
    targetPort: 80
