developers-house/ops/meta/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meta-http
spec:
  rules:
  - host: "*"
    http:
      paths:
      - path: /.well-known/security.txt
        pathType: Prefix
        backend:
          service:
            name: meta-http
            port:
              number: 80
